--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,39 +1,108 @@
-// Muli
+// Ames Roman
 @font-face {
-  font-family: "Muli-Regular";
-  src: url("../fonts/Muli/Muli-Regular.eot"); /* IE9 Compat Modes */
-  src: url("../fonts/Muli/Muli-Regular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/Muli/Muli-Regular.otf") format("opentype"), /* Open Type Font */
-    url("../fonts/Muli/Muli-Regular.svg") format("svg"), /* Legacy iOS */
-    url("../fonts/Muli/Muli-Regular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/Muli/Muli-Regular.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/Muli/Muli-Regular.woff2") format("woff2"); /* Modern Browsers */
+  font-family: 'AmesRoman';
+  src: url('../fonts/amesRoman/AmesRoman-Regular.eot');
+  src: url('../fonts/amesRoman/AmesRoman-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/amesRoman/AmesRoman-Regular.svg#AmesRoman-Regular') format('svg'),
+    url('../fonts/amesRoman/AmesRoman-Regular.ttf') format('truetype'),
+    url('../fonts/amesRoman/AmesRoman-Regular.woff') format('woff'),
+    url('../fonts/amesRoman/AmesRoman-Regular.woff2') format('woff2');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Muli-Bold";
-  src: url("../fonts/Muli/Muli-Bold.eot"); /* IE9 Compat Modes */
-  src: url("../fonts/Muli/Muli-Bold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/Muli/Muli-Bold.otf") format("opentype"), /* Open Type Font */
-    url("../fonts/Muli/Muli-Bold.svg") format("svg"), /* Legacy iOS */
-    url("../fonts/Muli/Muli-Bold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/Muli/Muli-Bold.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/Muli/Muli-Bold.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: normal;
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-ExtraBold.eot');
+  src: url('../fonts/Poppins/Poppins-ExtraBold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-ExtraBold.svg#Poppins-ExtraBold') format('svg'),
+       url('../fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-ExtraBold.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-ExtraBold.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-Light.eot');
+  src: url('../fonts/Poppins/Poppins-Light.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Light.svg#Poppins-Light') format('svg'),
+       url('../fonts/Poppins/Poppins-Light.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Light.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Light.woff2') format('woff2');
+  font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
-  font-family: "Muli-SemiBold";
-  src: url("../fonts/Muli/Muli-SemiBold.eot"); /* IE9 Compat Modes */
-  src: url("../fonts/Muli/Muli-SemiBold.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/Muli/Muli-SemiBold.otf") format("opentype"), /* Open Type Font */
-    url("../fonts/Muli/Muli-SemiBold.svg") format("svg"), /* Legacy iOS */
-    url("../fonts/Muli/Muli-SemiBold.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/Muli/Muli-SemiBold.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/Muli/Muli-SemiBold.woff2") format("woff2"); /* Modern Browsers */
-  font-weight: normal;
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-Medium.eot');
+  src: url('../fonts/Poppins/Poppins-Medium.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Medium.svg#Poppins-Medium') format('svg'),
+       url('../fonts/Poppins/Poppins-Medium.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Medium.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Medium.woff2') format('woff2');
+  font-weight: 500;
   font-style: normal;
 }
+
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-Regular.eot');
+  src: url('../fonts/Poppins/Poppins-Regular.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Regular.svg#Poppins-Regular') format('svg'),
+       url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Regular.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-SemiBold.eot');
+  src: url('../fonts/Poppins/Poppins-SemiBold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-SemiBold.svg#Poppins-SemiBold') format('svg'),
+       url('../fonts/Poppins/Poppins-SemiBold.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-SemiBold.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-SemiBold.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-Thin.eot');
+  src: url('../fonts/Poppins/Poppins-Thin.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Thin.svg#Poppins-Thin') format('svg'),
+       url('../fonts/Poppins/Poppins-Thin.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Thin.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Thin.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/Poppins-Bold.eot');
+  src: url('../fonts/Poppins/Poppins-Bold.eot?#iefix') format('embedded-opentype'),
+       url('../fonts/Poppins/Poppins-Bold.svg#Poppins-Bold') format('svg'),
+       url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype'),
+       url('../fonts/Poppins/Poppins-Bold.woff') format('woff'),
+       url('../fonts/Poppins/Poppins-Bold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+}
+
+
+
+
+
+
+
+
+
+
