--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -22,6 +22,7 @@
 @import 'components/footer';
 @import "components/humburger";
 @import "components/section-home";
+@import "components/social-list";
 // @import "components/sidebar";
 @import "components/modal";
 
