--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -407,6 +407,30 @@ input {
   max-width: 1140px;
   margin: 0 auto;
   padding: 0 15px;
+  &_lg {
+    max-width: 1295px;
+    padding: 0 15px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+    @include d(1300) {
+      max-width: 95%;
+      padding: 0;
+    }
+  
+    // @include d(991) {
+    //   max-width: 910px;
+  
+    // }
+    // @include d(767) {
+    //   max-width: 100%;
+  
+    // }
+    // @include d(575) {
+    //   max-width: 100%;
+  
+    // }
+  }
 }
 
 .main,
