--- a/src/scss/components/_section-home.scss
+++ b/src/scss/components/_section-home.scss
@@ -1,4 +1,5 @@
 .section-home {
   background-color: $black;
   height: 100vh;
+  background: radial-gradient(circle, rgba(50,50,50,1) 0%, rgba(29,30,31,1) 100%);
 }
