--- a/src/html/components/_section-home.html
+++ b/src/html/components/_section-home.html
@@ -1,5 +1,41 @@
 <section class="section section-home">
-  <div class="container">
-
+  <div class="container_lg">
+    <ul class="social-list">
+      <!-- <li class="social-item"><a href="#" class="social-link">
+          <svg class="svg-icon">
+            <use xlink:href="img/svg/sprite-svg/sprite.svg#facebook">
+            </use>
+          </svg>
+        </a>
+      </li> -->
+      <!-- <li class="social-item"><a href="#" class="social-link">
+          <svg class="svg-icon">
+            <use xlink:href="img/svg/sprite-svg/sprite.svg#telegram">
+            </use>
+          </svg>
+        </a>
+      </li> -->
+      <li class="social-item"><a href="#" class="social-link">
+          <svg class="svg-icon">
+            <use xlink:href="img/svg/sprite-svg/sprite.svg#git">
+            </use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item"><a href="#" class="social-link">
+          <svg class="svg-icon">
+            <use xlink:href="img/svg/sprite-svg/sprite.svg#youtube">
+            </use>
+          </svg>
+        </a>
+      </li>
+      <li class="social-item"><a href="#" class="social-link">
+          <svg class="svg-icon">
+            <use xlink:href="img/svg/sprite-svg/sprite.svg#instagram">
+            </use>
+          </svg>
+        </a>
+      </li>
+    </ul>
   </div>
 </section>
