--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,6 +7,8 @@
   right: 0;
   z-index: 1;
   padding: 20px 0;
+  height: 100vh;
+
   &-row {
     padding: 0 30px;
     display: flex;
@@ -25,14 +27,16 @@
   span {
     position: relative;
     font-weight: 400;
-    &:first-child {  
+
+    &:first-child {
       color: $gray;
       -webkit-text-stroke: 1px $gray;
       -webkit-text-fill-color: $red;
       display: inline-block;
       z-index: 10;
     }
-    &:last-child {  
+
+    &:last-child {
       margin-left: -.62em;
       color: $gray;
       -webkit-text-stroke: 1px $gray;
