section about start

--- a/src/html/components/_section-home.html
+++ b/src/html/components/_section-home.html
@@ -1,20 +1,13 @@
 <section class="section section-home">
   <div class="container_lg">
+    <div class="home-title">
+      <h1 class="title-1">
+        Andrew <br>
+        Khimich
+      </h1>
+      <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+    </div>
     <ul class="social-list">
-      <!-- <li class="social-item"><a href="#" class="social-link">
-          <svg class="svg-icon">
-            <use xlink:href="img/svg/sprite-svg/sprite.svg#facebook">
-            </use>
-          </svg>
-        </a>
-      </li> -->
-      <!-- <li class="social-item"><a href="#" class="social-link">
-          <svg class="svg-icon">
-            <use xlink:href="img/svg/sprite-svg/sprite.svg#telegram">
-            </use>
-          </svg>
-        </a>
-      </li> -->
       <li class="social-item"><a href="#" class="social-link">
           <svg class="svg-icon">
             <use xlink:href="img/svg/sprite-svg/sprite.svg#git">
@@ -37,5 +30,25 @@
         </a>
       </li>
     </ul>
+    <button class="scroll-btn">
+      <span class="button-text">
+        scroll
+      </span>
+    </button>
+    <div class="abstract-lines">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </div>
 </section>
