--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,8 @@
 @import "components/humburger";
 @import "components/section-home";
 @import "components/social-list";
+@import "components/scroll-btn";
+@import "components/section-about";
 // @import "components/sidebar";
 @import "components/modal";
 
