--- a/src/scss/base/_sprite-svg.scss
+++ b/src/scss/base/_sprite-svg.scss
@@ -3,13 +3,13 @@
     display: inline-block;
     width: 20px;
     height: 20px;
-    stroke: $gray;
-    transition: stroke $duration;
-    fill: transparent;
+    fill: $gray;
+    transition: fill $duration;
+    // fill: transparent;
 
     @include rh(1024) {
       &:hover {
-        stroke: $red;
+        fill: $yellow;
       }
     }
   }
