--- a/src/scss/components/_humburger.scss
+++ b/src/scss/components/_humburger.scss
@@ -1,18 +1,28 @@
 .humburger {
   background-color: transparent;
   width: 30px;
-  height: 16px;
+  height: 20px;
   position: relative;
   border: none;
+  padding: 10px;
   // display: none;
   z-index: 10;
+  cursor: pointer;
+  display: inline-block;
+  margin-right: 10px;
 
-  @include d(991) {
-    display: inline-block;
+  @include rh(1024) {
+    &:hover {
+      .humburger-item {
+        background-color: $yellow;
+      }
+    }
+
   }
 
   &.open {
     .humburger-item {
+      background-color: $yellow;
 
       &:first-child,
       &:last-child {
@@ -47,12 +57,13 @@
     height: 1px;
     background-color: $white;
     position: absolute;
+    border-radius: 3px;
 
     &:first-child {
       top: 0;
       left: 0;
       width: 75%;
-      transition-property: width;
+      transition-property: width, background-color;
       transition-timing-function: $timing;
       transition-duration: $duration;
     }
@@ -61,7 +72,7 @@
       top: 50%;
       margin-top: -1px;
       left: 0;
-      transition-property: transform;
+      transition-property: width, background-color;
       transition-timing-function: $timing;
       transition-duration: $duration;
     }
@@ -70,7 +81,7 @@
       top: 50%;
       margin-top: -1px;
       left: 0;
-      transition-property: transform;
+      transition-property: width, background-color;
       transition-timing-function: $timing;
       transition-duration: $duration;
     }
@@ -79,7 +90,7 @@
       bottom: 0;
       right: 0;
       width: 75%;
-      transition-property: width;
+      transition-property: width, background-color;
       transition-timing-function: $timing;
       transition-duration: $duration;
     }
