--- a/src/scss/components/_section-home.scss
+++ b/src/scss/components/_section-home.scss
@@ -1,5 +1,58 @@
 .section-home {
-  background-color: $black;
+  background: radial-gradient(circle, rgba(50, 50, 50, 1) 0%, rgba(29, 30, 31, 1) 100%);
   height: 100vh;
-  background: radial-gradient(circle, rgba(50,50,50,1) 0%, rgba(29,30,31,1) 100%);
+  // background-image: url(../img/jpg/banner.jpg);
+  background-size: cover;
+  background-position: center;
+
+  .container_lg {
+    height: 100%;
+  }
+}
+
+.home-title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -60%);
+  text-align: center;
+}
+
+.sub-title {
+  text-align: center;
+  text-transform: capitalize;
+  font-weight: 300;
+
+  span {
+    color: $yellow
+  }
+}
+
+.abstract-lines {
+  width: 200px;
+  height: 300px;
+  background-color: transparent;
+  position: absolute;
+  top: 160px;
+  left: 400px;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 0;
+  pointer-events: none;
+  // background-color: $black;
+
+  span {
+    width: 200px;
+    height: 1px;
+    background-color: $gray;
+    display: block;
+
+    transform: rotate(-48deg);
+
+    &:nth-last-child(-n+3) {
+      opacity: 0;
+    }
+  }
 }
