--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -100,6 +100,7 @@ a {
   display: inline-block;
   text-decoration: none;
   color: inherit;
+  font-size: inherit;
   line-height: 1.6em;
   margin: 0;
   background-color: transparent; //Remove the gray background on active links in IE 10.
