--- a/src/scss/components/_section-home.scss
+++ b/src/scss/components/_section-home.scss
@@ -1,7 +1,7 @@
 .section-home {
-  background: radial-gradient(circle, rgba(50, 50, 50, 1) 0%, rgba(29, 30, 31, 1) 100%);
+  background:url(../img/png/noise.png), radial-gradient(circle, rgba(50, 50, 50, 1) 0%, rgba(29, 30, 31, 1) 100%);
   height: 100vh;
-  // background-image: url(../img/jpg/banner.jpg);
+  // background-image: url(../img/png/noice.png);
   background-size: cover;
   background-position: center;
 
