--- a/src/html/components/_section-about.html
+++ b/src/html/components/_section-about.html
@@ -1,5 +1,7 @@
 <section class="section section-about">
-
+  <div class="word">
+    <p>About</p> 
+  </div>
   <div class="abstract-lines">
     <span></span>
     <span></span>
