--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -237,8 +237,12 @@ progress {
 
 // Remove the default vertical scrollbar in IE 10+.
 textarea {
-  overflow: auto;
+  overflow: hidden;
   resize: none;
+
+  &:focus {
+    outline: none;
+  }
 }
 
 label {
@@ -462,6 +466,7 @@ main {
 
 .title-3 {
   @extend h3;
+  font-size: 50px;
 }
 
 .title-4 {
@@ -480,8 +485,8 @@ main {
 //project buttons
 .button {
   display: inline-block;
-  font-size: 12px;
-  font-family: $font-primary;
+  font-size: 14px;
+  font-family: $font-secondary;
   height: 60px;
   line-height: 58px;
   min-width: 309px;
@@ -491,6 +496,13 @@ main {
   cursor: pointer;
   border: 1px solid transparent;
   text-align: left;
+  &_primary {
+    background-color: transparent;
+    transition: color $timing $duration;
+    &:focus, &:hover {
+      color: $yellow;
+    }
+  }
 }
 
 
@@ -526,5 +538,49 @@ main {
     font-size: 360px;
     font-weight: 700;
     line-height: 1em;
+  }
+}
+
+.input {
+  &-container {
+    position: relative;
+    display: block;
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &-item {
+    width: 100%;
+    border: none;
+    border-bottom: 1px $gray solid;
+    height: 50px;
+    line-height: 50px;
+    font-size: 14px;
+    font-family: $font-secondary;
+    letter-spacing: .06em;
+    background-color: transparent;
+    transition: border $timing $duration;
+    color: $yellow;
+    &:focus,
+    &:valid {
+      border-bottom: 1px solid $yellow;
+      &~.input-label {
+        font-size: 10px;
+        top: -8px;
+        color: $yellow;
+      }
+    }
+  }
+
+  &-label {
+    position: absolute;
+    font-family: $font-secondary;
+    transition: color $timing $duration;
+    left: 0;
+    top: 15px;
+    font-size: 14px;
+    transition: font-size .4s ease, top .4s ease;
+    pointer-events: none;
   }
 }
