--- a/src/scss/components/_section-home.scss
+++ b/src/scss/components/_section-home.scss
@@ -1,9 +1,10 @@
 .section-home {
-  background:url(../img/png/noise.png), radial-gradient(circle, rgba(50, 50, 50, 1) 0%, rgba(29, 30, 31, 1) 100%);
+  // background-image: linear-gradient(90deg, rgba(25,25,25,1) 0%, rgba(94,94,94,1) 100%);
+  background-image: linear-gradient(90deg, rgba(17,17,17,1) 0%, rgba(108,108,108,1) 100%);
   height: 100vh;
-  background-size: cover;
-  background-position: center;
-
+  background-size: 300%;
+  background-position: left;
+  animation: bg-animation 15s ease infinite alternate;
   .container_lg {
     height: 100%;
   }
