--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,6 +25,7 @@
 @import "components/social-list";
 @import "components/scroll-btn";
 @import "components/section-about";
+@import "components/section-contact";
 // @import "components/sidebar";
 @import "components/modal";
 
