--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -1,21 +1,25 @@
 .section-contact {
-  background-image: linear-gradient(90deg, rgba(17,17,17,1) 0%, rgb(31, 31, 31) 100%);
+  background-image: linear-gradient(90deg, rgba(17, 17, 17, 1) 0%, rgb(31, 31, 31) 100%);
   height: 100vh;
   background-size: 100%;
   // background-position: left top;
   background-repeat: no-repeat;
+
   // animation: bg-animation 15s ease infinite alternate;
   .container_lg {
     height: 100%;
   }
+
   .section-title {
     margin-bottom: 30px;
   }
+
   .title-3 {
     text-align: center;
     color: $gray;
   }
 }
+
 .contact {
   &-row {
     padding-top: 240px;
@@ -23,33 +27,67 @@
     justify-content: space-between;
     height: 100%;
   }
+
   &-content {
     max-width: 50%;
     width: 50%;
     padding: 0 80px;
-    p {
+
+    &>p {
       text-align: justify;
       color: $gray;
+      margin-bottom: 40px;
     }
   }
+
   &-form {
     max-width: 50%;
     width: 50%;
   }
 }
+
 .form {
   position: relative;
   padding: 40px 60px 60px;
   margin-top: -40px;
-  box-shadow: 0px 12px 43px -6px rgba(0,0,0,0.75);
+  box-shadow: 0px 12px 43px -6px rgba(0, 0, 0, 0.75);
   max-width: 90%;
+
   .button {
-    // margin-top: 30px;
     display: block;
     text-align: center;
     margin: 40px auto 0;
-    box-shadow: 0px 12px 43px -6px rgba(0,0,0,0.75);
+    box-shadow: 0px 12px 43px -6px rgba(0, 0, 0, 0.75);
+    @include rh(1024) {
+      &:hover {
+        box-shadow: 0px 12px 23px -6px rgba(0, 0, 0, 0.75);
+        .svg-icon {
+          margin-left: 10px;
+          fill: $yellow;
+        }
+      }
+    }
   }
 }
 
+.contact-list {
+  position: relative;
 
+  &__item {
+    display: block;
+    margin-bottom: 30px;
+  }
+
+  &__heading {
+    font-size: 18px;
+    font-family: $font-secondary;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: $yellow;
+  }
+
+  &__link {
+    font-size: 16px;
+    color: $gray;
+  }
+}
