--- a/src/html/components/_section-contact.html
+++ b/src/html/components/_section-contact.html
@@ -13,11 +13,11 @@
         <ul class="contct-list">
           <li class="contact-list__item">
             <p class="contact-list__heading">Phone:</p>
-            <a href="" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
+            <a href="tel:+380675879898" class="contact-list__link" target="_blank">+3(8067)587-98-98</a>
           </li>
           <li class="contact-list__item">
             <p class="contact-list__heading">E-mail:</p>
-            <a href="" class="contact-list__link" target="_blank">andrewkhimich@gmail.com</a>
+            <a href="mailto:" class="contact-list__link" target="_blank">andrewkhimich@gmail.com</a>
           </li>
         </ul>
       </div>
