--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -1,14 +1,7 @@
 .section-contact {
   background-image: linear-gradient(90deg, rgba(17, 17, 17, 1) 0%, rgb(31, 31, 31) 100%);
-  height: 100vh;
-  background-size: 100%;
-  // background-position: left top;
+  background-size: cover;
   background-repeat: no-repeat;
-
-  // animation: bg-animation 15s ease infinite alternate;
-  .container_lg {
-    height: 100%;
-  }
 
   .section-title {
     margin-bottom: 30px;
