--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import "components/scroll-btn";
 @import "components/section-about";
 @import "components/section-contact";
+@import "components/section-portfolio";
 // @import "components/sidebar";
 @import "components/modal";
 
