--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -7,12 +7,17 @@
   right: 0;
   z-index: 10;
   padding: 30px 0;
-
+  @include d(768) {
+    padding: 20px 0;
+  }
   &-row {
     padding: 0 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    @include d(768) {
+      padding: 0 10px;
+    }
   }
 }
 
