--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -2,7 +2,10 @@
   background-image: linear-gradient(90deg, rgba(17, 17, 17, 1) 0%, rgb(31, 31, 31) 100%);
   background-size: cover;
   background-repeat: no-repeat;
-
+  padding: 240px 0;
+  @include d(768) {
+    padding: 160px 0;
+  }
   .section-title {
     margin-bottom: 30px;
   }
@@ -15,7 +18,6 @@
 
 .contact {
   &-row {
-    padding-top: 240px;
     display: flex;
     justify-content: space-between;
     height: 100%;
