--- a/src/scss/components/_section-home.scss
+++ b/src/scss/components/_section-home.scss
@@ -1,8 +1,9 @@
 .section-home {
-  background-image: linear-gradient(90deg, rgba(17,17,17,1) 0%, rgba(74,74,74,1) 100%);
+  background-image: linear-gradient(90deg, rgba(17, 17, 17, 1) 0%, rgba(74, 74, 74, 1) 100%);
   background-size: 300%;
   background-position: left;
   animation: bg-animation 15s ease infinite alternate;
+  height: 100vh;
 }
 
 .home-title {
@@ -11,6 +12,20 @@
   left: 50%;
   transform: translate(-50%, -60%);
   text-align: center;
+  .abstract-lines {
+    @include d(768) {
+      right: 60%;
+      bottom: 80%;
+    }
+    @include d(575) {
+      width: 160px;
+      height: 240px;
+      bottom: 90%;
+    }
+    @include d(480) {
+      display: none;
+    }
+  }
 }
 
 .sub-title {
@@ -18,8 +33,18 @@
   text-transform: capitalize;
   font-weight: 300;
   color: $white;
+  @include d(768) {
+    font-size: 16px;
+  }
+  @include d(575) {
+    max-width: 70%;
+    margin: 0 auto;
+  }
+  @include d(340) {
+    max-width: 80%;
+  }
   span {
-    color: $yellow
+    color: $yellow;
   }
 }
 
@@ -28,22 +53,20 @@
   height: 300px;
   background-color: transparent;
   position: absolute;
-  top: 160px;
-  left: 400px;
+  bottom: 50%;
+  right: 80%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   z-index: 0;
   pointer-events: none;
-  // background-color: $black;
 
   span {
     width: 200px;
     height: 1px;
     background-color: $gray;
     display: block;
-
     transform: rotate(-48deg);
 
     &:nth-last-child(-n+3) {
