--- a/src/scss/components/_social-list.scss
+++ b/src/scss/components/_social-list.scss
@@ -7,6 +7,10 @@
     justify-content: space-around;
     flex-direction: column;
     align-items: center;
+    @include d(768) {
+      bottom: 20px;
+      left: 20px;
+    }
   }
 
   &-item {
