--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -10,13 +10,14 @@
   @include d(768) {
     padding: 20px 0;
   }
+  
   &-row {
     padding: 0 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     @include d(768) {
-      padding: 0 10px;
+      padding: 0;
     }
   }
 }
