--- a/src/scss/components/_section-about.scss
+++ b/src/scss/components/_section-about.scss
@@ -30,8 +30,12 @@
       bottom: -20px;
       left: 95%;
       background-color: $black;
-      @include d(991) {
+      @include d(1299) {
         bottom: 0;
+      }
+      @include d(575) {
+        width: 60px;
+        left: 90%;
       }
     }
   }
@@ -70,7 +74,7 @@
       width: 60%;
     }
     @include d(575) {
-      width: 90%;
+      width: 100%;
     }
   }
 
@@ -82,12 +86,15 @@
       margin: 0 auto;
       padding-right: 0;
     }
+    @include d(575) {
+      width: 100%;
+    }
   }
 }
 
 .section-title {
   margin-bottom: 60px;
-  @include d(991) {
+  @include d(1299) {
     margin-bottom: 30px;
   }
 }
