--- a/src/scss/components/_section-contact.scss
+++ b/src/scss/components/_section-contact.scss
@@ -3,8 +3,11 @@
   background-size: cover;
   background-repeat: no-repeat;
   padding: 240px 0;
-  @include d(768) {
+  @include d(1199) {
     padding: 160px 0;
+  }
+  @include d(768) {
+    padding: 100px 0;
   }
   .section-title {
     margin-bottom: 30px;
@@ -21,13 +24,24 @@
     display: flex;
     justify-content: space-between;
     height: 100%;
+    @include d(991) {
+      flex-direction: column;
+    }
   }
 
   &-content {
     max-width: 50%;
     width: 50%;
     padding: 0 80px;
-
+    @include d(991) {
+      max-width: 100%;
+      width: 100%;
+      padding: 0 40px;
+      margin-bottom: 40px;
+    }
+    @include d(575) {
+      padding: 0;
+    }
     &>p {
       text-align: justify;
       color: $gray;
@@ -38,6 +52,14 @@
   &-form {
     max-width: 50%;
     width: 50%;
+    @include d(991) {
+      max-width: 100%;
+      width: 100%;
+      padding: 0 40px;
+    }
+        @include d(575) {
+      padding: 0;
+    }
   }
 }
 
@@ -47,7 +69,14 @@
   margin-top: -40px;
   box-shadow: 0px 12px 43px -6px rgba(0, 0, 0, 0.75);
   max-width: 90%;
-
+  @include d(991) {
+    margin-top: 0;
+    max-width: 100%;
+    padding: 40px;
+  }
+  @include d(575) {
+    padding: 20px;
+  }
   .button {
     display: block;
     text-align: center;
