--- a/src/scss/components/_section-portfolio.scss
+++ b/src/scss/components/_section-portfolio.scss
@@ -2,6 +2,9 @@
   background-color: $white;
   color: $black;
   padding: 180px 0;
+  @include d(991) {
+    padding: 100px 0;
+  }
   @include d(768) {
     padding: 100px 0;
   }
@@ -21,7 +24,17 @@
     transform: rotate(90deg);
     right: 0;
     top: 180px;
-
+    @include d(1199) {
+      right: -30px;
+    }
+    @include d(991) {
+      position: relative;
+      transform: rotate(0);
+      top: 0;
+      display: inline-block;
+      right: 0;
+      padding-left: 30px;
+    }
     &:before {
       content: "";
       width: 100px;
@@ -30,6 +43,13 @@
       bottom: -20px;
       left: 95%;
       background-color: $black;
+      @include d(1299) {
+        bottom: 0;
+      }
+      @include d(575) {
+        width: 60px;
+        left: 90%;
+      }
     }
   }
 }
@@ -40,16 +60,48 @@
   grid-template-rows: 50% 50%;
   grid-gap: 10px;
   height: 560px;
-
+  @include d(1199) {
+    height: 440px;
+  }
+  @include d(768) {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+  }
   &-row {
     max-width: 1200px;
     margin: 0 auto 0 0;
+    @include d(1599) {
+      max-width: 1100px;
+    }
+    @include d(1399) {
+      max-width: 1000px;
+    }
+    @include d(1299) {
+      max-width: 900px;
+    }
+    @include d(1199) {
+      max-width: 860px;
+    }
+    @include d(1099) {
+      max-width: 760px;
+    }
+    @include d(991) {
+      max-width: 100%;
+    }
   }
 
   &-card {
     position: relative;
     overflow: hidden;
-
+    @include d(768) {
+      position: relative;
+      width: 100%;
+      height: 240px;
+      &:not(:last-child) {
+        margin-bottom: 20px;
+      }
+    }
     &:hover {
       .portfolio-card__content {
         height: 100%;
