--- a/src/html/components/_header.html
+++ b/src/html/components/_header.html
@@ -1,5 +1,5 @@
 <!-- header start -->
-<header class="header">
+<!-- <header class="header">
   <div class="container_lg">
     <div class="header-row">
       <a href="./index.html" class="logo">
@@ -13,6 +13,6 @@
         <span class="humburger-item"></span>
       </button>
     </div>
-  </div>
+  </div> -->
 </header>
 <!-- header end -->
