--- a/src/html/components/_section-home.html
+++ b/src/html/components/_section-home.html
@@ -16,11 +16,13 @@
         <span></span>
         <span></span>
       </div>
-      <h1 class="title-1">
-        Andrew <br>
-        Khimich
-      </h1>
-      <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+      <div class="home-title__text">
+        <h1 class="title-1">
+          Andrew <br>
+          Khimich
+        </h1>
+        <p class="sub-title"> <span>#</span> Front end developer <span>#</span> freelancer</p>
+      </div>
     </div>
     <ul class="social-list">
       <li class="social-item"><a href="#" class="social-link">
